--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project-1</title>
     <link rel="stylesheet" href="../css/project1.css" type="text/css">
 </head>
 <body>
